finished contacts.apk

--- a/Italian/main/Contacts.apk/res/values-it/strings.xml
+++ b/Italian/main/Contacts.apk/res/values-it/strings.xml
@@ -695,139 +695,139 @@ Tocca l'icona Unisci in basso per iniziare."</string>
     <string name="option_rename_group">Rinomina</string>
     <string name="option_delete_group">Cancella</string>
     <string name="deleteConfirmation_title">Cancella</string>
-    <string name="readOnlyContactDeleteConfirmationDetail">\"%s\" contains info from multiple accounts. Info from read-only accounts will be hidden in your contacts list.</string>
-    <string name="multipleContactDeleteConfirmationDetail">Deleting \"%s\" will delete info from multiple accounts.</string>
-    <string name="deleteConfirmationDetail">Delete \"%s\"?</string>
-    <string name="nickname_picker_name_column">Contact name</string>
-    <string name="nickname_picker_nickname_column">Title</string>
-    <string name="not_applied">Not applied</string>
-    <string name="toast_for_saving_nickname">Nickname saved</string>
-    <string name="toast_for_failed_saving_nickname">Failed to save nickname</string>
-    <string name="nickname_editor_title">Edit nickname</string>
-    <string name="auto_nickname">Auto</string>
-    <string name="auto_set_nickname">Auto</string>
-    <string name="restore_nickname">Restore</string>
-    <string name="custom_nickname_hint">Enter nickname</string>
-    <string name="open_contact">View contact</string>
-    <string name="send_contact_shortcut_todesktop_success">Added to Home screen</string>
-    <string name="date_picker_label">Remind me 3 days before and again on the day of</string>
-    <string name="today">Today</string>
-    <string name="next_birthday">Next birthday: %s</string>
-    <string name="ringLabelsGroup">Ringtone</string>
-    <string name="default_ringtone">Default ringtone</string>
-    <string name="recent_number">Recent</string>
-    <string name="cloud_antispam_mark">Label as spam</string>
-    <string name="antispam_mark_my_contribution">"Show other users that I've labeled this number."</string>
-    <string name="antispam_provider_format">Labeled as spam by %s</string>
-    <string name="type_mx_msg">Cloud messaging</string>
-    <string name="menu_new_favorite_action_bar">New</string>
-    <string name="click_close">Click screen to close</string>
-    <string name="menu_bar_group_add">Add</string>
-    <string name="menu_bar_group_sms">Group SMS</string>
-    <string name="menu_bar_group_ringtone">Group ringtone</string>
-    <string name="menu_bar_group_rename">Rename</string>
-    <string name="menu_bar_group_delete">Delete</string>
-    <string name="menu_bar_group_ringtone_largeui">Ringtone</string>
-    <string name="group_rename_dialog_title">Rename group</string>
-    <string name="group_sms_progress_msg">Grouping…</string>
-    <string name="group_create_success_toast">Group created</string>
-    <string name="group_rename_success_toast">Group renamed</string>
-    <string name="group_delete_success_toast">Group deleted</string>
-    <string name="group_create_fail_toast">Failed to create group</string>
-    <string name="group_rename_fail_toast">Failed to rename group</string>
-    <string name="contact_unfavorite_toast">Removed from favorites</string>
-    <string name="group_member_remove_toast">Removed from group</string>
-    <string name="contact_delete_toast">Contact deleted</string>
-    <string name="duplicate_group_name">A group with that name already exists</string>
-    <string name="all_list_empty">No contacts</string>
-    <string name="favorites_list_empty">No favorites</string>
-    <string name="groups_list_empty">No groups</string>
-    <string name="single_group_list_empty">No group members</string>
-    <string name="picker_recent_list_empty">No recent contacts</string>
-    <string name="picker_all_list_empty">No contacts</string>
-    <string name="picker_favorites_list_empty">No favorites</string>
-    <string name="picker_groups_list_empty">No groups</string>
-    <string name="contact_edit_title_insert">Add %s contact</string>
-    <string name="contact_edit_title_edit">Edit contact</string>
-    <string name="contact_edit_title_readonly">Read-only contact</string>
-    <string name="account_container_title">Imported from</string>
-    <string name="save_photo_progress">Saving photo…</string>
-    <string name="move_and_resize">Move and resize</string>
-    <string name="btn_rotation">Rotate</string>
-    <string name="contact_pick_photo">Photo</string>
-    <string name="select_photo_from_photo_package">Select photo from photo package</string>
-    <string name="select_new_photo_from_photo_package">Browse folders</string>
-    <string name="photo_package_activity_title">Browse folders</string>
-    <string name="btn_delete_one_contact">Delete contact</string>
-    <string name="btn_delete_multi_contacts">Delete %d</string>
-    <string name="btn_split_contact">Separate</string>
-    <string name="use_photo_as_primary2">"Use %1$s's contact photo"</string>
-    <string name="label_custom_type">Custom</string>
-    <string name="pkgLabel">Contacts and dialer</string>
+    <string name="readOnlyContactDeleteConfirmationDetail">\"%s\" contiene info da diversi account. Le info di account in sola lettura saranno nascoste nella tua lista contatti.</string>
+    <string name="multipleContactDeleteConfirmationDetail">Cancellando \"%s\" cancellerà le informazioni da diversi account.</string>
+    <string name="deleteConfirmationDetail">Cancellare \"%s\"?</string>
+    <string name="nickname_picker_name_column">Nome contatto</string>
+    <string name="nickname_picker_nickname_column">Titolo</string>
+    <string name="not_applied">Non applicato</string>
+    <string name="toast_for_saving_nickname">Soprannome salvato</string>
+    <string name="toast_for_failed_saving_nickname">Impossibile salvare il soprannome</string>
+    <string name="nickname_editor_title">Modifica soprannome</string>
+    <string name="auto_nickname">Automatico</string>
+    <string name="auto_set_nickname">Automatico</string>
+    <string name="restore_nickname">Ripristina</string>
+    <string name="custom_nickname_hint">Inserisci soprannome</string>
+    <string name="open_contact">Mostra contatto</string>
+    <string name="send_contact_shortcut_todesktop_success">Aggiunto alla schermata Home</string>
+    <string name="date_picker_label">Ricordamelo 3 giorni prima e anche nel giorno di</string>
+    <string name="today">Oggi</string>
+    <string name="next_birthday">Prossimo compleanno: %s</string>
+    <string name="ringLabelsGroup">Suoneria</string>
+    <string name="default_ringtone">Suoneria predefinita</string>
+    <string name="recent_number">Recente</string>
+    <string name="cloud_antispam_mark">Segnala come spam</string>
+    <string name="antispam_mark_my_contribution">Mostra ad altri utenti che ho segnalato questo numero</string>
+    <string name="antispam_provider_format">Segnalato come spam da %s</string>
+    <string name="type_mx_msg">Messaggi Cloud</string>
+    <string name="menu_new_favorite_action_bar">Nuovo</string>
+    <string name="click_close">Tocca lo schermo per chiudere</string>
+    <string name="menu_bar_group_add">Aggiungi</string>
+    <string name="menu_bar_group_sms">SMS di gruppo</string>
+    <string name="menu_bar_group_ringtone">Suoneria di gruppo</string>
+    <string name="menu_bar_group_rename">Rinomina</string>
+    <string name="menu_bar_group_delete">Cancella</string>
+    <string name="menu_bar_group_ringtone_largeui">Suoneria</string>
+    <string name="group_rename_dialog_title">Rinomina gruppo</string>
+    <string name="group_sms_progress_msg">Creazione gruppo in corso…</string>
+    <string name="group_create_success_toast">Gruppo creato</string>
+    <string name="group_rename_success_toast">Gruppo rinominato</string>
+    <string name="group_delete_success_toast">Gruppo cancellato</string>
+    <string name="group_create_fail_toast">Impossibile creare il gruppo</string>
+    <string name="group_rename_fail_toast">Impossibile rinominare il gruppo</string>
+    <string name="contact_unfavorite_toast">Rimosso dai preferiti</string>
+    <string name="group_member_remove_toast">Rimosso dal gruppo</string>
+    <string name="contact_delete_toast">Contatto cancellato</string>
+    <string name="duplicate_group_name">Esiste giò un gruppo con questo nome</string>
+    <string name="all_list_empty">Nessun contatto</string>
+    <string name="favorites_list_empty">Nessun preferito</string>
+    <string name="groups_list_empty">Nessun gruppo</string>
+    <string name="single_group_list_empty">Nessun membro nel gruppo</string>
+    <string name="picker_recent_list_empty">Nessun contatto recente</string>
+    <string name="picker_all_list_empty">Nessun contatto</string>
+    <string name="picker_favorites_list_empty">Nessun preferito</string>
+    <string name="picker_groups_list_empty">Nessun gruppo</string>
+    <string name="contact_edit_title_insert">Aggiungi contatto %s</string>
+    <string name="contact_edit_title_edit">Modifica contatto</string>
+    <string name="contact_edit_title_readonly">Contatto in sola lettura</string>
+    <string name="account_container_title">Importato da</string>
+    <string name="save_photo_progress">Salvataggio immagine in corso…</string>
+    <string name="move_and_resize">Muovi e ridimensiona</string>
+    <string name="btn_rotation">Ruota</string>
+    <string name="contact_pick_photo">Immagine</string>
+    <string name="select_photo_from_photo_package">Seleziona foto dalle cartelle</string>
+    <string name="select_new_photo_from_photo_package">Sfoglia cartelle</string>
+    <string name="photo_package_activity_title">Sfoglia cartelle</string>
+    <string name="btn_delete_one_contact">Cancella contatto</string>
+    <string name="btn_delete_multi_contacts">Cancella %d</string>
+    <string name="btn_split_contact">Separa</string>
+    <string name="use_photo_as_primary2">"Usa l'immagine del contatto %1$s"</string>
+    <string name="label_custom_type">Personalizzato</string>
+    <string name="pkgLabel">Contatti e tastierino</string>
     <string name="preference_smart_group_title">Smart groups</string>
-    <string name="preference_smart_group_company_title">By company</string>
-    <string name="preference_smart_group_company_summary">Group by company</string>
-    <string name="preference_smart_group_location_title">By location</string>
-    <string name="preference_smart_group_location_summary">Group by area code</string>
-    <string name="preference_smart_group_frequency_title">By most recent</string>
-    <string name="preference_smart_group_frequency_summary">Group by most recent</string>
+    <string name="preference_smart_group_company_title">Per azienda</string>
+    <string name="preference_smart_group_company_summary">Raggruppa per azienda</string>
+    <string name="preference_smart_group_location_title">Per località</string>
+    <string name="preference_smart_group_location_summary">Raggruppa per codice area</string>
+    <string name="preference_smart_group_frequency_title">Più recenti</string>
+    <string name="preference_smart_group_frequency_summary">Raggruppo per i più recenti</string>
     <string name="smart_group_action_bar_title">%1$s-%2$s, %3$s</string>
     <string name="smart_group_label">Smart groups</string>
-    <string name="smart_group_loading">Loading groups…</string>
-    <string name="smart_group_company_label">By company</string>
-    <string name="smart_group_location_label">By location</string>
-    <string name="smart_group_frequency_label">By most recent</string>
-    <string name="smart_group_company_unavailable">No company</string>
-    <string name="smart_group_location_unavailable">No address</string>
-    <string name="smart_group_frequency_1">Within the past month</string>
-    <string name="smart_group_frequency_2">Within the past 3 months</string>
-    <string name="smart_group_frequency_3">Within the past 6 months</string>
-    <string name="smart_group_frequency_4">Over 6 months ago</string>
-    <string name="contact_detail_calllog_call_record_tips">Record call</string>
-    <string name="contact_detail_calllog_call_note_tips">Notes</string>
-    <string name="import_from_other_phone">Import from another phone</string>
-    <string name="device_brand_title">Choose a brand</string>
-    <string name="device_version_title">Choose a model</string>
-    <string name="device_list_title">Choose a phone</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
-    <string name="scan">Scan</string>
-    <string name="device_bluetooth_title">Transfer contancts</string>
-    <string name="device_version_header_no_bluetooth">Import contacts via SIM card</string>
-    <string name="device_version_header_bluetooth">Make sure Bluetooth is enabled</string>
-    <string name="scanning">Scanning…</string>
-    <string name="select_device">Choose a device</string>
-    <string name="none_paired">No devices are currently paired</string>
-    <string name="none_found">No devices found</string>
-    <string name="device_pairing_dialog_title">Pair devices</string>
-    <string name="device_pairing_dialog_message">Pairing…</string>
-    <string name="device_paired_dialog_title">Fetching contacts…</string>
-    <string name="device_paired_dialog_message">Fetching contacts…</string>
-    <string name="no_contacts_dialog_title">Failed to find contacts</string>
-    <string name="no_contacts_dialog_message">"Your contacts may be stored on your SIM card. Try importing contacts from you SIM card to your phone's internal storage and then try again."</string>
-    <string name="cancel_import_dialog_title">Stop</string>
-    <string name="cancel_import_dialog_message">Stop importing contacts?</string>
-    <string name="title_paired_devices">Paired devices</string>
-    <string name="title_other_devices">Other available devices</string>
-    <string name="button_scan">Rescan</string>
-    <string name="button_cancel_scan">Stop</string>
-    <string name="device_other_title">Other phone</string>
-    <string name="device_other_guide">"If your phone isn't listed, follow the steps below"</string>
-    <string name="my_phone_provider_bluetooth">My phone has Bluetooth</string>
-    <string name="my_phone_not_provider_bluetooth">"My phone doesn't have Bluetooth"</string>
-    <string name="other_phone">Other phones</string>
-    <string name="device_import_title">Import</string>
-    <string name="device_import_progress_begin_message">Importing…</string>
-    <string name="device_import_progress_end_message">Import complete</string>
-    <string name="device_import_progress_message">Importing…</string>
-    <string name="device_import_failed_message">Import failed</string>
+    <string name="smart_group_loading">Caricamento gruppi in corso…</string>
+    <string name="smart_group_company_label">Per azienda</string>
+    <string name="smart_group_location_label">Per località</string>
+    <string name="smart_group_frequency_label">Più recenti</string>
+    <string name="smart_group_company_unavailable">Senza azienda</string>
+    <string name="smart_group_location_unavailable">Senza indirizzo</string>
+    <string name="smart_group_frequency_1">"Nell'ultimo mese"</string>
+    <string name="smart_group_frequency_2">Negli ultimi 3 mesi</string>
+    <string name="smart_group_frequency_3">Negli ultimi 6 mesi</string>
+    <string name="smart_group_frequency_4">Oltre 6 mesi fa</string>
+    <string name="contact_detail_calllog_call_record_tips">Registra chiamata</string>
+    <string name="contact_detail_calllog_call_note_tips">Note</string>
+    <string name="import_from_other_phone">Importa da un altro telefono</string>
+    <string name="device_brand_title">Scegli una marca</string>
+    <string name="device_version_title">Scegli un modello</string>
+    <string name="device_list_title">Scegli un telefono</string>
+    <string name="next">Avanti</string>
+    <string name="previous">Indietro</string>
+    <string name="scan">Scansiona</string>
+    <string name="device_bluetooth_title">Trasferisci contatti</string>
+    <string name="device_version_header_no_bluetooth">Importa contatti trami carta SIM</string>
+    <string name="device_version_header_bluetooth">Assicurati che il Bluetooth sia attivo</string>
+    <string name="scanning">Scansione in corso…</string>
+    <string name="select_device">Scegli un dispositivo</string>
+    <string name="none_paired">"Attualmente non c'è nessun dispositivo accoppiato"</string>
+    <string name="none_found">Nessun dispositivo trovato</string>
+    <string name="device_pairing_dialog_title">Accoppia dispositivi</string>
+    <string name="device_pairing_dialog_message">Accoppiamento in corso…</string>
+    <string name="device_paired_dialog_title">Recupero contatti in corso…</string>
+    <string name="device_paired_dialog_message">Recupero contatti in corso…</string>
+    <string name="no_contacts_dialog_title">Impossibile trovare contatti</string>
+    <string name="no_contacts_dialog_message">I tuoi contatti potrebbero essere memorizzati nella tua carta SIM. Prova ad importare i contatti dalla tua carta SIM alla memoria interna del dispositivo e riprova"</string>
+    <string name="cancel_import_dialog_title">Ferma</string>
+    <string name="cancel_import_dialog_message">"Fermare l'importazione dei contatti?"</string>
+    <string name="title_paired_devices">Dispositivi accoppiati</string>
+    <string name="title_other_devices">Altri dispositivi disponibili</string>
+    <string name="button_scan">Rieseguii scansione</string>
+    <string name="button_cancel_scan">Ferma</string>
+    <string name="device_other_title">Altro dispositivo</string>
+    <string name="device_other_guide">Se il tuo dispositivo non è nella lista, segui i passi seguenti</string>
+    <string name="my_phone_provider_bluetooth">Il mio dispositivo ha il Bluetooh</string>
+    <string name="my_phone_not_provider_bluetooth">Il mio dispositivo non ha il Bluetooh</string>
+    <string name="other_phone">Altri telefoni</string>
+    <string name="device_import_title">Importa</string>
+    <string name="device_import_progress_begin_message">Importazione in corso…</string>
+    <string name="device_import_progress_end_message">Importazione completata</string>
+    <string name="device_import_progress_message">Importazione in corso…</string>
+    <string name="device_import_failed_message">Importazione fallita</string>
     <string name="hint_distance" />
-    <string name="hint_more_contact">Merge duplicate contacts</string>
-    <string name="device_import_account_dialog_title">Choose an account</string>
+    <string name="hint_more_contact">Unisci contatti duplicati</string>
+    <string name="device_import_account_dialog_title">Scegli un account</string>
     <string name="device_import_account_dialog_title_suffix">"
-(found %1$s contacts)"</string>
-    <string name="device_import_local_account">Local account</string>
-    <string name="import_name">Name</string>
+(trovati %1$s contatti)"</string>
+    <string name="device_import_local_account">Account locale</string>
+    <string name="import_name">Nome</string>
     <string name="import_percent">0%</string>
     <string name="percent_sign">%</string>
     <string name="ret_sign">"
