--- a/Italian/main/Contacts.apk/res/values-it/strings.xml
+++ b/Italian/main/Contacts.apk/res/values-it/strings.xml
@@ -400,7 +400,7 @@ Scegli una delle seguenti opzioni:"</string>
     <string name="recentCalls_callNumber">Chiama %s</string>
     <string name="preference_contacts_filter">Configura liste contatti</string>
     <string name="lunarBirthdayLabelsGroup">Compleanno lunare</string>
-    <string name="launcherDialer">Phone</string>
+    <string name="launcherDialer">Telefono</string>
     <string name="menu_newContact">Nuovo contatto</string>
     <string name="menu_copy">Copia</string>
     <string name="menu_not_redirect_calls_to_vm">Segreteria non in uso</string>
@@ -423,12 +423,12 @@ Scegli una delle seguenti opzioni:"</string>
     <string name="clearCallLogProgress_title">Cancellazione registri chiamate in corso…</string>
     <string name="imei">IMEI</string>
     <string name="meid">MEID</string>
-    <string name="voicemail">Messagio in segreteria</string>
+    <string name="voicemail">Messaggio in segreteria</string>
     <string name="unknown">Sconosciuto</string>
     <string name="private_num">Numero privato</string>
     <string name="payphone">Telefonata a pagamento</string>
     <string name="dialerKeyboardHintText">Usa la tastiera per comporre</string>
-    <string name="dialerDialpadHintText">Componi il numero per agiungere una chiamata</string>
+    <string name="dialerDialpadHintText">Componi il numero per aggiungere una chiamata</string>
     <string name="simContacts_emptyLoading">Caricamento contatti dalla carta SIM in corso…</string>
     <string name="simContacts_title">Contatti sulla carta SIM</string>
     <string name="noContactsHelpTextWithSyncForCreateShortcut">Non hai nessun contatto da visualizzare. (Se hai appena aggiunto un account, potrebbero essere necessari alcuni minuti per la sincronizzazione dei contatti.)</string>
@@ -450,7 +450,7 @@ Per aggiungere contatti, tocca "</string>
 Per aggiungere contatti alla lista dei preferiti:
 
 "</string>
-    <string name="dialer_useDtmfDialpad">Use touch tone keypad</string>
+    <string name="dialer_useDtmfDialpad">Usa i toni tastiera</string>
     <string name="dialer_returnToInCallScreen">Ritorna alla chiamata in corso</string>
     <string name="dialer_addAnotherCall">Aggiungi chiamata</string>
     <string name="callDetailTitle">Dettagli chiamata</string>
@@ -475,7 +475,7 @@ Per aggiungere contatti alla lista dei preferiti:
     <string name="description_voicemail_button">segreteria</string>
     <string name="description_search_button">cerca</string>
     <string name="description_dial_button">componi</string>
-    <string name="description_delete_button">backspace</string>
+    <string name="description_delete_button">cancella</string>
     <string name="description_digits_edittext">numero da comporre</string>
     <string name="scanning_sdcard_failed_title">La scheda SD non può essere scansionata</string>
     <string name="add_2sec_pause">Aggiungi pausa di 2 sec.</string>
@@ -494,7 +494,7 @@ Per aggiungere contatti alla lista dei preferiti:
     <string name="voicemail_fetching_content">Recupero messaggi vocali…</string>
     <string name="voicemail_fetching_timout">Impossibile recuperare i messaggi vocali</string>
     <string name="call_log_new_header">Nuovo</string>
-    <string name="call_log_old_header">Più vecchio</string>
+    <string name="call_log_old_header">Precedente</string>
     <string name="voicemail_status_voicemail_not_available">Impossibile connettersi al server della segreteria</string>
     <string name="voicemail_status_messages_waiting">Impossibile connettersi al server della segreteria. Ci sono nuovi messaggi vocali in attesa.</string>
     <string name="voicemail_status_configure_voicemail">Configura la tua segreteria.</string>
@@ -529,26 +529,26 @@ Per aggiungere contatti alla lista dei preferiti:
     <string name="callrecordview_item_op_time_short_incoming">"Ricevute: "</string>
     <string name="callrecordview_item_op_time_missed">Non connesse</string>
     <string name="callrecordview_item_op_time_rejected">Rifiutate</string>
-    <string name="callrecordview_menu_show_title">Call log display</string>
+    <string name="callrecordview_menu_show_title">Lista chiamate</string>
     <string name="callrecordview_menu_show_all">Tutte le chiamate</string>
     <string name="callrecordview_menu_show_missed">Chiamate perse</string>
     <string name="callrecordview_menu_show_called">Chiamate effettuate</string>
     <string name="callrecordview_menu_show_accepted">Chiamate accettate</string>
     <string name="callrecordview_menu_show_stranger">Chiamate da numeri sconosciuti</string>
     <string name="callrecordview_menu_show_new">Nuovi contatti</string>
-    <string name="callrecordview_menu_delete">Cancella registro chiamate</string>
-    <string name="callrecordview_menu_delete_all">Svuota registro chiamate</string>
+    <string name="callrecordview_menu_delete">Cancella chiamata</string>
+    <string name="callrecordview_menu_delete_all">Cancella lista chiamate</string>
     <string name="callrecordview_menu_delete_missed">Cancella chiamate perse</string>
     <string name="callrecordview_menu_delete_called">Cancella chiamate effettuate</string>
     <string name="callrecordview_menu_delete_accepted">Cancella chiamate accettate</string>
     <string name="callrecordview_menu_delete_stranger">Cancella numeri sconosciuti</string>
     <string name="callrecordview_menu_delete_new">Cancella registro chiamate da nuovi contatti</string>
-    <string name="callrecordview_menu_delete_confirm">Confirmare %s?</string>
+    <string name="callrecordview_menu_delete_confirm">Confermare %s?</string>
     <string name="callrecordview_menu_delete_one">Rimuovi dal registro chiamate</string>
     <string name="callrecordview_menu_add_call_note">Aggiungi nota alla chiamata</string>
     <string name="callrecordview_menu_edit_call_note">Modifica nota della chiamata</string>
     <string name="delete_call_log_title">Seleziona registro chiamate da cancellare</string>
-    <string name="menu_dialpad_text">Keypad</string>
+    <string name="menu_dialpad_text">Tastierino</string>
     <string name="dialer_empty_text_no_search_result">Nessun contatto trovato</string>
     <string name="dialer_empty_text_loading">Caricamento in corso…</string>
     <string name="dialer_empty_text_no_call_log">Nessun contatto recente</string>
@@ -562,7 +562,7 @@ Per aggiungere contatti alla lista dei preferiti:
     <string name="sim_no_contact">Nessun contatto sulla carta SIM</string>
     <string name="sim_indexed_contact_not_exist">La posizione %1$d sulla carta SIM non è valida: deve essere compresa tra %2$d e %3$d.</string>
     <string name="sim_contact_search_error">Si è verificato un errore</string>
-    <string name="service_provider">Directory</string>
+    <string name="service_provider">Cartella</string>
     <string name="zero_items_selected">Seleziona voci</string>
     <string name="select_all">Seleziona tutto</string>
     <string name="deselect_all">Deseleziona tutto</string>
@@ -571,7 +571,7 @@ Per aggiungere contatti alla lista dei preferiti:
     <string name="confirm_delete_contact_all_call_logs">Cancellare il registro chiamate?</string>
     <string name="confirm_delete_selected_all_call_logs">Cancellare i registri chiamate?</string>
     <string name="calllog_menu_blacklist">Blocca</string>
-    <string name="calllog_menu_edit_before_call">Nodifica</string>
+    <string name="calllog_menu_edit_before_call">Notifica</string>
     <string name="calllog_menu_send_sms">Invia un messaggio</string>
     <string name="menu_call_ip_number">Effettua chiamata IP (al numero %s)</string>
     <string name="delete_contact_calllog_title">Cancellare i registri chiamate?</string>
@@ -591,8 +591,8 @@ Per aggiungere contatti alla lista dei preferiti:
     <string name="pick_favorites_list_title">%1$d preferiti</string>
     <string name="pick_recent_list_title">%1$d contatti recenti</string>
     <string name="noRecentContacts">Nessun contatto recente</string>
-    <string name="hint_search_phone_numbers">%d contact numbers</string>
-    <string name="hint_search_emails">%d contact emails</string>
+    <string name="hint_search_phone_numbers">%d numeri di contatto</string>
+    <string name="hint_search_emails">%d email di contatto</string>
     <string name="pick_favorites_contacts_list_title">%1$d preferiti</string>
     <string name="pick_recent_contacts_list_title">%1$d contatti recenti</string>
     <string name="loading_groups">Caricamento gruppi in corso…</string>
@@ -738,7 +738,7 @@ Tocca l'icona Unisci in basso per iniziare."</string>
     <string name="contact_unfavorite_toast">Rimosso dai preferiti</string>
     <string name="group_member_remove_toast">Rimosso dal gruppo</string>
     <string name="contact_delete_toast">Contatto cancellato</string>
-    <string name="duplicate_group_name">Esiste giò un gruppo con questo nome</string>
+    <string name="duplicate_group_name">Esiste già un gruppo con questo nome</string>
     <string name="all_list_empty">Nessun contatto</string>
     <string name="favorites_list_empty">Nessun preferito</string>
     <string name="groups_list_empty">Nessun gruppo</string>
@@ -755,7 +755,7 @@ Tocca l'icona Unisci in basso per iniziare."</string>
     <string name="move_and_resize">Muovi e ridimensiona</string>
     <string name="btn_rotation">Ruota</string>
     <string name="contact_pick_photo">Immagine</string>
-    <string name="select_photo_from_photo_package">Seleziona foto dalle cartelle</string>
+    <string name="select_photo_from_photo_package">Seleziona immagine dalle cartelle</string>
     <string name="select_new_photo_from_photo_package">Sfoglia cartelle</string>
     <string name="photo_package_activity_title">Sfoglia cartelle</string>
     <string name="btn_delete_one_contact">Cancella contatto</string>
@@ -764,7 +764,7 @@ Tocca l'icona Unisci in basso per iniziare."</string>
     <string name="use_photo_as_primary2">"Usa l'immagine del contatto %1$s"</string>
     <string name="label_custom_type">Personalizzato</string>
     <string name="pkgLabel">Contatti e tastierino</string>
-    <string name="preference_smart_group_title">Smart groups</string>
+    <string name="preference_smart_group_title">Gruppi intelligenti</string>
     <string name="preference_smart_group_company_title">Per azienda</string>
     <string name="preference_smart_group_company_summary">Raggruppa per azienda</string>
     <string name="preference_smart_group_location_title">Per località</string>
@@ -772,7 +772,7 @@ Tocca l'icona Unisci in basso per iniziare."</string>
     <string name="preference_smart_group_frequency_title">Più recenti</string>
     <string name="preference_smart_group_frequency_summary">Raggruppo per i più recenti</string>
     <string name="smart_group_action_bar_title">%1$s-%2$s, %3$s</string>
-    <string name="smart_group_label">Smart groups</string>
+    <string name="smart_group_label">Gruppi intelligenti</string>
     <string name="smart_group_loading">Caricamento gruppi in corso…</string>
     <string name="smart_group_company_label">Per azienda</string>
     <string name="smart_group_location_label">Per località</string>
@@ -854,7 +854,7 @@ Tocca l'icona Unisci in basso per iniziare."</string>
     <string name="add_xiaomi_account_dialog_msg">Usa il tuo account Xiaomi per sincronizzare ed eseguire il backup dei tuoi contatti tra vari dispositivi.</string>
     <string name="add_xiaomi_account_dialog_btn">Usa account Xiaomi</string>
     <string name="keep_local_btn">Usa la memoria interna del dispositivo"</string>
-    <string name="batch_delete">Delete batch</string>
+    <string name="batch_delete">Eliminazione multipla</string>
     <string name="batch_delete_msg">"Cancellare %d contatti? 
 
 Saranno cancellati i dati dei contatti anche dal tuo account MiCloud."</string>
@@ -923,7 +923,7 @@ Saranno cancellati i dati dei contatti anche dal tuo account MiCloud."</string>
     <string name="sim_capacity_content" formatted="false">Capacità totale %d | %d usata</string>
     <string name="account_unactivated">Account non attivato</string>
     <string name="all_resources">Tutte</string>
-    <string name="callrecordview_menu_batch_delete">Batch delete</string>
+    <string name="callrecordview_menu_batch_delete">Eliminazione multipla</string>
     <string name="delete_call_log_selected_title">Cancellare il registro chiamate selezionato?</string>
     <string name="deleting">Cancellazione in corso...</string>
     <string name="description_author">Autore:</string>
@@ -988,7 +988,7 @@ Saranno cancellati i dati dei contatti anche dal tuo account MiCloud."</string>
     <string name="resource_comment_upload_hint">I commenti saranno visualizzati dopo una breve verifica.</string>
     <string name="resource_comment_upload_not_bought">Prego usare questa tema prima di lasciare dei commenti.</string>
     <string name="resource_comment_upload_not_logined">"Prego eseguire prima l'accesso"</string>
-    <string name="resource_comment_upload_success">Commento inviato! Il tuo commeno sarà visualizzato dopo una breve verifica.</string>
+    <string name="resource_comment_upload_success">Commento inviato! Il tuo commento sarà visualizzato dopo una breve verifica.</string>
     <string name="resource_default">Suoneria predefinita</string>
     <string name="resource_default_name">Risorsa</string>
     <string name="resource_delete_all">Cancellare %1$d risorse selezionate?</string>
@@ -1062,7 +1062,7 @@ Saranno cancellati i dati dei contatti anche dal tuo account MiCloud."</string>
     <string name="resource_ranking_purchase">A pagamento</string>
     <string name="resource_ringtone_default">Suoneria</string>
     <string name="resource_ringtone_playing_error">Errore in riproduzione</string>
-    <string name="resource_ringtone_volume_mute">La tua suoneria è attualmente sileziata</string>
+    <string name="resource_ringtone_volume_mute">La tua suoneria è attualmente silenziata</string>
     <string name="resource_save_to_note">Salva in Note</string>
     <string name="resource_see_more">Vedi altro</string>
     <string name="resource_select">Seleziona</string>
