--- a/Italian/main/FileExplorer.apk/res/values-it/strings.xml
+++ b/Italian/main/FileExplorer.apk/res/values-it/strings.xml
@@ -31,7 +31,7 @@
     <string name="operation_show_sys">Mostra file di sistema e cache</string>
     <string name="operation_hide_sys">Nascondi file di sistema e cache</string>
     <string name="cancel">Annulla</string>
-    <string name="background">Scarica background</string>
+    <string name="background">Scarica in background</string>
     <string name="no_file">Nessun file</string>
     <string name="tab_category">Cerca</string>
     <string name="tab_phone">Telefono</string>
