optimization for Provision

--- a/Italian/main/Provision.apk/res/values-it/strings.xml
+++ b/Italian/main/Provision.apk/res/values-it/strings.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="welcome">Benvenuto</string>
-    <string name="input_method_setting">Scegli metodo immissione</string>
+    <string name="input_method_setting">Scegli tastiera</string>
     <string name="input_method_category">"Scegli il metodo d'immissione predefinito che verrà utilizzato durante la scrittura delle email, note, e tutto il resto. Si nota che potrai installare tastiere di terze parti."</string>
     <string name="other_settings">Impostazioni aggiuntive</string>
     <string name="other_settings_location">Accedi alla posizione</string>
-    <string name="other_settings_location_summary">Let apps pinpoint your location</string>
+    <string name="other_settings_location_summary">Consenti alle applicazioni di segnalare la tua posizione</string>
     <string name="other_settings_user_experience">Feedback utente</string>
     <string name="other_settings_user_experience_summary">"Contribuirai al miglioramento di MIUI con l'invio di dati anonimi di utilizzo"</string>
 </resources>
