--- a/Italian/main/XiaomiAccount.apk/res/values-it/strings.xml
+++ b/Italian/main/XiaomiAccount.apk/res/values-it/strings.xml
@@ -158,7 +158,7 @@ Puoi utilizzarlo per accedere e recuperare la password."</string>
     <string name="trust_device">Autorizza dispositivo</string>
     <string name="vcode_prompt_long">Inserisci il codice di verifica generato tramite il sistema di sicurezza Xiaomi</string>
     <string name="vcode_notification_title">Il tuo accesso di verifica è incompleto</string>
-    <string name="activate_phone_failed_notif_title">Impossibile attivare SIM</string>
+    <string name="activate_phone_failed_notif_title_msim">Impossibile avviare MiCloud per SIM %s</string>
     <string name="activate_status_title_activating">Attivazione SIM, attendere prego...</string>
     <string name="activate_status_title_activating_msim">Attivazione SIM %s...</string>
     <string name="activate_status_desc_getting_device_info">Recupero info dispositivo</string>
@@ -172,8 +172,8 @@ Puoi utilizzarlo per accedere e recuperare la password."</string>
     <string name="activate_status_desc_sms_sent">SMS di attivazione inviato correttamente</string>
     <string name="activate_status_desc_sim_absent">Impossibile trovare SIM</string>
     <string name="activate_status_desc_acquire_phone_number">Recupero numero dal server</string>
-    <string name="activate_status_desc_acquire_phone_number_server_error">"Si è verificato un errore del server durante l'acquisizione del numero."</string>
-    <string name="activate_status_desc_acquire_phone_number_server_no_info">Impossibile recuperare il numero.</string>
+    <string name="activate_status_desc_acquire_phone_number_server_error_wait">"Si è verificato un errore del server durante l'acquisizione del numero.  Nuovo tentativo..."</string>
+    <string name="activate_status_desc_acquire_phone_number_server_io_error_wait">"Si è verificato un I/O server durante l'acquisizione del numero di telefono. Nuovo tentativo..."</string>
     <string name="activate_status_desc_acquire_phone_number_server_no_info_wait">Impossibile recuperare numero di telefono. Nuovo tentativo..."</string>
     <string name="activate_status_desc_acquire_phone_number_server_error">"Si è verificato un errore del server durante l'acquisizione del numero di telefono"</string>
     <string name="activate_status_desc_acquire_phone_number_server_io_error">"Si è verificato un I/O server durante l'acquisizione del numero di telefono"</string>
@@ -182,15 +182,15 @@ Puoi utilizzarlo per accedere e recuperare la password."</string>
     <string name="activate_status_desc_acquire_sim_user_id_server_error_wait">"Si è verificato un errore del server durante l'acquisizione delle informazioni di registrazione. Nuovo tentativo..."</string>
     <string name="activate_status_desc_acquire_sim_user_id_server_io_error_wait">"Si è verificato un I/O server durante l'acquisizione delle informazioni di registrazione. Nuovo tentativo..."</string>
     <string name="activate_status_desc_acquire_sim_user_id_server_no_info_wait">Non è stato possibile recuperare le informazioni di registrazione. Nuovo tentativo..."</string>
-    <string name="activate_status_desc_acquire_sim_user_id_server_error">Si è verificato un errore del server durante l'acquisizione delle informazioni di registrazione</string>
+    <string name="activate_status_desc_acquire_sim_user_id_server_error">"Si è verificato un errore del server durante l'acquisizione delle informazioni di registrazione"</string>
     <string name="activate_status_desc_acquire_sim_user_id_server_io_error">"Si è verificato un I/O server durante l'acquisizione del numero di telefono"</string>
     <string name="activate_status_desc_acquire_sim_user_id_server_no_info">Non è stato possibile recuperare le informazioni di registrazione</string>
     <string name="activate_status_desc_acquire_sim_pass_token">Acquisizione informazioni di sicurezza dal server</string>
     <string name="activate_status_desc_acquire_sim_pass_token_server_error_wait">"Si è verificato un errore del server durante l'acquisizione delle informazioni di sicurezza. Nuovo tentativo..."</string>
     <string name="activate_status_desc_acquire_sim_pass_token_server_io_error_wait">"Si è verificato un I/O server durante l'acquisizione delle informazioni di sicurezza. Nuovo tentativo..."</string>
     <string name="activate_status_desc_acquire_sim_pass_token_server_no_info_wait">Non è stato possibile recuperare le informazioni di sicurezza. Nuovo tentativo..."</string>
-    <string name="activate_status_desc_acquire_sim_pass_token_server_error">Si è verificato un errore del server durante l'acquisizione delle informazioni di sicurezza</string>
-    <string name="activate_status_desc_acquire_sim_pass_token_server_io_error">Si è verificato un I/O server durante l'acquisizione delle informazioni di sicurezza</string>
+    <string name="activate_status_desc_acquire_sim_pass_token_server_error">"Si è verificato un errore del server durante l'acquisizione delle informazioni di sicurezza"</string>
+    <string name="activate_status_desc_acquire_sim_pass_token_server_io_error">"Si è verificato un I/O server durante l'acquisizione delle informazioni di sicurezza"</string>
     <string name="activate_status_desc_acquire_sim_pass_token_server_no_info">Non è stato possibile recuperare le informazioni di sicurezza</string>
     <string name="activate_status_desc_acquire_sim_pass_token_password_error">Non è stato possibile recuperare le informazioni di sicurezza: token password non valido"</string>
     <string name="checking_input">Verifica inserimento...</string>
