--- a/Italian/main/Settings.apk/res/values-it/strings.xml
+++ b/Italian/main/Settings.apk/res/values-it/strings.xml
@@ -1192,8 +1192,8 @@ Per cancellare musica, foto e altri dati dell'utente, è necessario cancellare i
     <string name="process_provider_in_use_description">Il provider %1$s è in uso.</string>
     <string name="runningservicedetails_stop_dlg_title">Interrompere il servizio di sistema?</string>
     <string name="runningservicedetails_stop_dlg_text">Se interrompi questo servizio, potrebbero verificarsi anomalie in alcune funzioni del tablet fino allo spegnimento e alla riaccensione del tablet.</string>
-    <string name="language_settings">Lingua e immissione</string>
-    <string name="language_keyboard_settings_title">Lingua e immissione</string>
+    <string name="language_settings">Lingua e tastiera</string>
+    <string name="language_keyboard_settings_title">Lingua e tastiera</string>
     <string name="language_settings_category">Impostazioni lingua</string>
     <string name="keyboard_settings_category">Tastiera e metodi di immissione</string>
     <string name="phone_language">Lingua</string>
@@ -2653,7 +2653,7 @@ ed esegui il software."</string>
     <string name="dialog_yes">Si</string>
     <string name="confirm_download_cancelation_dialog_message">Annullare il download?</string>
     <string name="found_new_version">Trovata nuova versione</string>
-    <string name="no_update_found">"Già all'ultima versione"</string>
+    <string name="no_update_found">"Già all'ultima versione "</string>
     <string name="no_updates_found">"Stai già usando l'ultima versione di MIUI."</string>
     <string name="no_updates_warning">Nessun aggiornamento trovato per il tuo dispositivo.</string>
     <string name="no_updates_warning2">"Rilassati, ti avviseremo se c'è un aggiornamento."</string>
