--- a/Italian/main/Music.apk/res/values-it/strings.xml
+++ b/Italian/main/Music.apk/res/values-it/strings.xml
@@ -20,7 +20,7 @@
     <string name="action_item_add_to_current_playlist">Playlist attuale</string>
     <string name="action_item_add_to_new_playlist">Nuova</string>
     <string name="online_music">Online</string>
-    <string name="my_music">Mia musica</string>
+    <string name="my_music">La mia musica</string>
     <string name="fragment_more">Altro</string>
     <string name="recommend_fragment_title">Argomento</string>
     <string name="channel_list_fragment_title">FM</string>
@@ -38,7 +38,7 @@
     <string name="track_list_control_edit_delete_playlist">Elimina</string>
     <string name="track_list_control_edit_rename_playlist">Rinomina</string>
     <string name="track_list_descript_cover">Copertina</string>
-    <string name="search_hint">Artista.Canzone.Album</string>
+    <string name="search_hint">Artista, canzone o album</string>
     <string name="buffering">Creazione buffer in corso...</string>
     <string name="loading_hint">Caricamento in corso...</string>
     <string name="artist_search_title">Artista</string>
@@ -50,18 +50,18 @@
     <string name="not_selected">Scegli una canzone</string>
     <string name="file_not_found">File inesistente</string>
     <string name="fail_to_play">Impossibile riprodurre</string>
-    <string name="my_music_empty">\"Mia musica\" è vuota. Scarica o imposta come preferito qualche brano in \"Online\"</string>
-    <string name="click_to_shuffle">Tocca per mescolare tutto</string>
+    <string name="my_music_empty">\"La mia musica\" è vuota. Scarica o imposta come preferito qualche brano in \"Online\"</string>
+    <string name="click_to_shuffle">Riproduzione casuale</string>
     <string name="send_to_title">Invia a (%1$s)</string>
     <string name="dialog_title_add_playlist">Aggiungi alla playlist</string>
     <string name="dialog_title_name_playlist">Nome playlist</string>
     <string name="dialog_title_track_picker">Seleziona canzone(i)</string>
     <string name="dialog_title_remove_tracks">Rimuovi</string>
     <string name="dialog_title_delete_tracks">Elimina</string>
-    <string name="dialog_button_find_music">Discover new music</string>
+    <string name="dialog_button_find_music">Trova nuova musica</string>
     <string name="dialog_button_create_playlist">Crea una Playlist</string>
     <string name="cancel">Annulla</string>
-    <string name="ok">Ok</string>
+    <string name="ok">OK</string>
     <string name="done">Fatto</string>
     <string name="retry">Riprova</string>
     <string name="dialog_button_scan_tracks">Cerca musica su questo dispositivo</string>
